--- a/package.json
+++ b/package.json
@@ -1,67 +1,65 @@
 {
-  "name": "iptv",
-  "scripts": {
-    "act:check": "act pull_request -W .github/workflows/check.yml",
-    "act:format": "act workflow_dispatch -W .github/workflows/format.yml",
-    "act:update": "act workflow_dispatch -W .github/workflows/update.yml",
-    "api:load": "tsx scripts/commands/api/load.ts",
-    "api:generate": "tsx scripts/commands/api/generate.ts",
-    "api:deploy": "npx gh-pages-clean && npx gh-pages -a -m \"Deploy to iptv-org/api\" -d .api -r https://$GITHUB_TOKEN@github.com/iptv-org/api.git",
-    "playlist:format": "tsx scripts/commands/playlist/format.ts",
-    "playlist:update": "tsx scripts/commands/playlist/update.ts",
-    "playlist:generate": "tsx scripts/commands/playlist/generate.ts",
-    "playlist:validate": "tsx scripts/commands/playlist/validate.ts",
-    "playlist:lint": "npx m3u-linter -c m3u-linter.json",
-    "playlist:deploy": "npx gh-pages-clean && npx gh-pages -m \"Deploy to GitHub Pages\" -d .gh-pages -r https://$GITHUB_TOKEN@github.com/iptv-org/iptv.git",
-    "readme:update": "tsx scripts/commands/readme/update.ts",
-    "report:create": "tsx scripts/commands/report/create.ts",
-    "check": "npm run playlist:lint && npm run playlist:validate",
-    "format": "npm run playlist:format",
-    "update": "npm run playlist:generate && npm run api:generate && npm run readme:update",
-    "deploy": "npm run playlist:deploy && npm run api:deploy",
-    "lint": "npx eslint ./scripts/**/*.ts ./tests/**/*.ts",
-    "test": "jest --runInBand",
-    "postinstall": "npm run api:load"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "testRegex": "tests/(.*?/)?.*test.ts$",
-    "setupFilesAfterEnv": [
-      "jest-expect-message"
-    ]
-  },
-  "author": "Arhey",
+  "name": "project-mulla",
+  "version": "1.0.0",
+  "description": "Provides a REST interface for the Safaricom Mpesa SOAP API",
   "private": true,
-  "license": "MIT",
+  "main": "index.js",
+  "scripts": {
+    "test": "gulp test",
+    "develop": "nodemon -w ./server -w index.js -w environment.js --exec npm start",
+    "lint": "eslint --fix ./server ./test",
+    "monitor": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kn9ts/project-mulla.git"
+  },
+  "author": "Eugene Mutai <eugenemutai@gmail.com> (http://twitter.com/kn9ts)",
+  "license": "GNU LESSER GENERAL PUBLIC LICENSE",
+  "bugs": {
+    "email": "eugenemutai@gmail.com",
+    "url": "https://github.com/kn9ts/project-mulla/issues"
+  },
+  "homepage": "https://github.com/kn9ts/project-mulla#readme",
   "dependencies": {
-    "@freearhey/core": "^0.2.1",
-    "@octokit/core": "^4.2.1",
-    "@octokit/plugin-paginate-rest": "^7.1.2",
-    "@octokit/plugin-rest-endpoint-methods": "^7.1.3",
-    "@octokit/types": "^11.1.0",
-    "@types/cli-progress": "^3.11.3",
-    "@types/jest": "^29.5.4",
-    "@types/lodash": "^4.14.198",
-    "@types/numeral": "^2.0.3",
-    "axios": "^1.5.1",
-    "chalk": "^4.1.2",
-    "cli-progress": "^3.12.0",
-    "commander": "^8.3.0",
-    "iptv-playlist-parser": "^0.13.0",
-    "jest-expect-message": "^1.1.3",
-    "lodash": "^4.17.21",
-    "m3u-linter": "^0.3.0",
-    "markdown-include": "^0.4.3",
-    "numeral": "^2.0.6",
-    "transliteration": "^2.3.5",
-    "ts-jest": "^29.1.1",
-    "tsx": "^4.6.2"
+    "body-parser": "~1.17.1",
+    "cheerio": "^0.20.0",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.6.7",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "jade": "~1.11.0",
+    "js-yaml": "^3.6.1",
+    "moment": "^2.13.0",
+    "morgan": "~1.8.2",
+    "node-uuid": "^1.4.7",
+    "request": "^2.72.0",
+    "serve-favicon": "~2.4.3",
+    "snyk": "^1.30.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.49.0"
+    "babel-eslint": "^6.0.4",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
+    "gulp": "^3.9.1",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-mocha": "^2.2.0",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.5.2",
+    "nodemon": "^1.9.2",
+    "run-sequence": "^1.2.1",
+    "sinon": "^1.17.4"
+  },
+  "engines": {
+    "node": "^4.3.2",
+    "npm": "^3.9.5"
   }
 }
